namespace CourseManagementAPI.Model
{
    public class RoleModel
    {
        public Guid Id { get; set; }
        public string Name { get; set; }
    }
}
